@@ -1,3 +1,10 @@
+1998-02-27  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* Graph.m: Don't include string.h, stdio.h, or collections.h.
+	Include misc.h for strdup.
+
+	* Graph.h (Graph): Add setRangesYMin:Max:.
+
 1998-02-24  Alex Lancaster  <alex@santafe.edu>
 
 	* common.[hm] (tkobjc_updateIdleTasks): Renamed from
